docgen/src/stylesheets/components/_sidebar.scss
nav.sidebar {
  float: left;
  width: 100%;
  height: 100%;
  position: absolute;
  max-width: $sidebar-width;
  border-right: 1px solid #d8d8d8;
  overflow: auto;
  padding-top: 120px;

  .sidebar-container {
    width: 100%;
    max-width: $sidebar-width;

    &.fixed {
      position: fixed;
      top: ($nav-height + 40px);
      z-index: 9;
      max-height: calc(100vh - #{$nav-height});
      overflow: auto;
    }

    h2.sidebar-header {
      font-weight: normal;
      font-size: 1.8em;
      line-height: 1.5em;
      padding-bottom: 5px;
    }

    ul {
      list-style: none;
      padding: 0;
    }

    .sidebar-elements {
      .sidebar-element {
        width: 100%;
        line-height: 32px;
        margin-bottom: 1em;

        &.level-h2 {}
        &.level-h3 {
          line-height: 24px;
          font-size: 12px;
          padding-left: 12px;
          font-family: "Open sans";
        }

        a {
          text-decoration: none;
          display: block;
          width: 100%;
          color: $charcoal-grey-75;
          font-weight: 400;
          padding: 0 0.15em;
          line-height: 1.5;
          transition: color 0.2s ease, box-shadow 0.2s ease, font-weight 0.2s ease;
          font-size: 14px;

          &:focus,
          &:target {
            @extend %active-links;
          }
          &.active{
            transition: color 0.2s ease, box-shadow 0.2s ease;
            @extend %active-links;
          }
          &.navItem-active{
            @extend %active-links;
          }
        }
      }
    }
  }



  @include small-mq {
    width: calc(100% + 16px);
    max-width: 320px;
    position: fixed;
    left: 0;
    top: 16px;
    border: none;
    padding-top: 0;
    background: #fefefe;
    z-index: 9;
    display: block;
    top: 0;
    padding: 1em;
    box-shadow: -20px 0 100px rgba(0,0,0,0.25);

    transform: translateX(-100%);
    will-change: transform;
    transition: transform 0.3s ease;

    .sidebar-header {
      max-width: calc(100% - 1em);
    }

    &.Showed {
      transform: translateX(0);
    }

    .sidebar-container {
      width: 100%;
      max-width: 100%;
    }
  }
}


.sidebar-opener {
  position: fixed;
  left: 2em;
  bottom: 2em;
  height: 52px;
  width: 52px;
  background: #39b1de;
  background-image: url(../images/open-doc-menu_icon.svg), linear-gradient(to right, #8f64f3 0%, #39b1de 90%);
  background-repeat: no-repeat;
  background-position: 65% center, center center;
  background-size: 60%, 100%;
  z-index: 11;
  border-radius: 50%;
  box-shadow: 0 6px 8px 0 rgba(0,0,0,0.14),0 1px 5px 0 rgba(0,0,0,0.12),0 3px 1px -2px rgba(0,0,0,0.2);
  transition: transform 0.2s ease, left 0.2s ease;
  transform-origin: center center;
  cursor: pointer;
  display: none;


  @include small-mq {
    display: block;
  }

  &:active {
    transform: scale(0.9)
  }

  &.Showed {
    transform: rotate(-180deg);
    transform-origin: center center;
    background-image: url(../images/open-doc-menu_icon.svg), linear-gradient(to left, #8f64f3 0%, #39b1de 90%);
    left: 340px;
  }
}

